--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,12 @@ services:
     ports:
       - "12379:2379"
 
+  mongo:
+    image: mongo:latest
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example   
+
